--- a/practica-cliente/dom.html
+++ b/practica-cliente/dom.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
 
 </head>
 <body>
@@ -44,6 +45,9 @@
 
   
 </ul>
+<div class="footer">
+    <a href="#" onclick="window.href=window.history.back();" >Volver</a>
+</div>
 </body>
 <script>
 var elementosLista = [
