añadiendo cambios a la página de index y subiendo página de eventos

--- a/practica-cliente/ajaxjson.html
+++ b/practica-cliente/ajaxjson.html
@@ -20,6 +20,8 @@ tr:nth-child(odd) {
 }
 
 </style>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/estilos.css">
 <body>
 
 <h2>Dar de alta registro de usuario</h2>
@@ -125,6 +127,8 @@ document.getElementById('formularioBusqueda').addEventListener('submit', functio
 });
 
 </script>
-
+<footer>
+    <a href="#" onclick="window.href=window.history.back();" >Volver</a>
+</footer>
 </body>
 </html>
