--- a/practica-cliente/eventos.html
+++ b/practica-cliente/eventos.html
@@ -92,7 +92,7 @@
         </head>
         <body>
 
-        <h2>Eventos en JavaScript</h2>
+        <h2 style="text-align: center;">Eventos en JavaScript</h2>
 
         <table>
             <tr>
@@ -127,7 +127,7 @@
                     <option value="4">Opción 4</option>
                     <option value="--" selected></option>
                 </select></td>
-                <td>Se dispara cuando el valor de un elemento cambia (por ejemplo, un input).</td>
+                <td>Se dispara cuando el valor de un elemento cambia.</td>
             </tr>
             <tr> 
                 <td><form><button type="submit">submit</button></form></td>
@@ -147,7 +147,8 @@
                 <td>Se dispara cuando se desplaza un elemento (por ejemplo, una ventana o un elemento con scroll).</td>
             </tr>
         </table>
-
+        <footer>
+            <a href="#" onclick="window.href=window.history.back();" >Volver</a>
         </body>
         </html>
         
