--- a/practica-cliente/index.html
+++ b/practica-cliente/index.html
@@ -40,7 +40,7 @@
         "bom":"bom.html",
         "validaciones":"validaciones.html",
         "eventos":"eventos.html",
-        "ajax":"ajax.html",
+        "ajax":"ajaxjson.html",
         "jquery":"jquery.html",
         "api":"ejercicioAPI.html"};
         for (const key in enlaces) {
